@@ -1,6 +1,6 @@
 ---
 name: Catalyst-Model-Estraier
-version: 0.0.1
+version: 0.0.2
 author:
   - 'Takeru INOUE <takeru.inoue _ gmail.com>'
 abstract: Hyper Estraier model class for Catalyst
@@ -13,12 +13,15 @@ requires:
   Search::Estraier: 0
   Test::More: 0
   version: 0
+build_requires:
+  Test/Perl/Critic: 0
+  Test::More: 0
 provides:
   Catalyst::Helper::Model::Estraier:
     file: lib/Catalyst/Helper/Model/Estraier.pm
   Catalyst::Model::Estraier:
     file: lib/Catalyst/Model/Estraier.pm
-    version: 0.0.1
+    version: 0.0.2
 generated_by: Module::Build version 0.2808
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.2.html
