@@ -1,3 +1,9 @@
+2007-12-09  Takeru INOUE  <takeru.inoue _ gmail.com>
+
+        * release 0.0.2:
+	* Build.PL
+	- fix dependency
+
 2007-12-08  Takeru INOUE  <takeru.inoue _ gmail.com>
 
         * release 0.0.1: created by Module::Starter
